@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021, 2023, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,13 +25,13 @@
  * @test
  * @summary Basic test for JFR jdk.VirtualThreadXXX events
  * @requires vm.continuations
- * @modules jdk.jfr java.base/java.lang:+open
- * @run junit/othervm JfrEvents
+ * @modules jdk.jfr java.base/java.lang:+open jdk.management
+ * @library /test/lib
+ * @run junit/othervm --enable-native-access=ALL-UNNAMED JfrEvents
  */
 
 import java.io.IOException;
 import java.nio.file.Path;
-import java.time.Duration;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.Executor;
@@ -39,20 +39,35 @@ import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.RejectedExecutionException;
 import java.util.concurrent.ThreadFactory;
-import java.util.concurrent.atomic.AtomicReference;
+import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.locks.LockSupport;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import jdk.jfr.EventType;
 import jdk.jfr.Recording;
 import jdk.jfr.consumer.RecordedEvent;
 import jdk.jfr.consumer.RecordingFile;
 
+import jdk.test.lib.thread.VThreadPinner;
+import jdk.test.lib.thread.VThreadRunner;   // ensureParallelism requires jdk.management
+import jdk.test.lib.thread.VThreadScheduler;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.ValueSource;
 import static org.junit.jupiter.api.Assertions.*;
 
 class JfrEvents {
-    private static final Object lock = new Object();
+
+    @BeforeAll
+    static void setup() {
+        int minParallelism = 2;
+        if (Thread.currentThread().isVirtual()) {
+            minParallelism++;
+        }
+        VThreadRunner.ensureParallelism(minParallelism);
+    }
 
     /**
      * Test jdk.VirtualThreadStart and jdk.VirtualThreadEnd events.
@@ -86,55 +101,42 @@ class JfrEvents {
     }
 
     /**
-     * Test jdk.VirtualThreadPinned event.
+     * Test jdk.VirtualThreadPinned event when parking while pinned.
      */
-    @Test
-    void testVirtualThreadPinned() throws Exception {
-        Runnable[] parkers = new Runnable[] {
-            () -> LockSupport.park(),
-            () -> LockSupport.parkNanos(Duration.ofDays(1).toNanos())
-        };
-
+    @ParameterizedTest
+    @ValueSource(booleans = { true, false })
+    void testParkWhenPinned(boolean timed) throws Exception {
         try (Recording recording = new Recording()) {
             recording.enable("jdk.VirtualThreadPinned");
-
             recording.start();
-            try (var executor = Executors.newVirtualThreadPerTaskExecutor()) {
-                for (Runnable parker : parkers) {
-                    // execute parking task in virtual thread
-                    var threadRef = new AtomicReference<Thread>();
-                    executor.submit(() -> {
-                        threadRef.set(Thread.currentThread());
-                        synchronized (lock) {
-                            parker.run();   // should pin carrier
-                        }
-                    });
 
-                    // wait for the task to start and the virtual thread to park
-                    Thread thread;
-                    while ((thread = threadRef.get()) == null) {
-                        Thread.sleep(10);
-                    }
-                    try {
-                        Thread.State state = thread.getState();
-                        while (state != Thread.State.WAITING && state != Thread.State.TIMED_WAITING) {
-                            Thread.sleep(10);
-                            state = thread.getState();
+            var started = new AtomicBoolean();
+            var done = new AtomicBoolean();
+            var vthread = Thread.startVirtualThread(() -> {
+                VThreadPinner.runPinned(() -> {
+                    started.set(true);
+                    while (!done.get()) {
+                        if (timed) {
+                            LockSupport.parkNanos(Long.MAX_VALUE);
+                        } else {
+                            LockSupport.park();
                         }
-                    } finally {
-                        LockSupport.unpark(thread);
                     }
-                }
+                });
+            });
+
+            try {
+                // wait for thread to start and park
+                awaitTrue(started);
+                await(vthread, timed ? Thread.State.TIMED_WAITING : Thread.State.WAITING);
             } finally {
+                done.set(true);
+                LockSupport.unpark(vthread);
+                vthread.join();
                 recording.stop();
             }
 
-            Map<String, Integer> events = sumEvents(recording);
-            System.err.println(events);
-
-            // should have a pinned event for each park
-            int pinnedCount = events.getOrDefault("jdk.VirtualThreadPinned", 0);
-            assertEquals(parkers.length, pinnedCount);
+            assertContainsPinnedEvent(recording, vthread);
         }
     }
 
@@ -151,16 +153,14 @@ class JfrEvents {
                 Executor scheduler = task -> pool.execute(task);
 
                 // create virtual thread that uses custom scheduler
-                ThreadFactory factory = ThreadBuilders.virtualThreadBuilder(scheduler).factory();
+                ThreadFactory factory = VThreadScheduler.virtualThreadFactory(scheduler);
 
                 // start a thread
                 Thread thread = factory.newThread(LockSupport::park);
                 thread.start();
 
                 // wait for thread to park
-                while (thread.getState() != Thread.State.WAITING) {
-                    Thread.sleep(10);
-                }
+                await(thread, Thread.State.WAITING);
 
                 // shutdown scheduler
                 pool.shutdown();
@@ -180,12 +180,21 @@ class JfrEvents {
                 recording.stop();
             }
 
-            Map<String, Integer> events = sumEvents(recording);
-            System.err.println(events);
-
-            int count = events.getOrDefault("jdk.VirtualThreadSubmitFailed", 0);
-            assertEquals(2, count);
+            List<RecordedEvent> submitFailedEvents = find(recording, "jdk.VirtualThreadSubmitFailed");
+            System.err.println(submitFailedEvents);
+            assertTrue(submitFailedEvents.size() == 2, "Expected two events");
         }
+    }
+
+    /**
+     * Returns the list of events in the given recording with the given name.
+     */
+    private static List<RecordedEvent> find(Recording recording, String name) throws IOException {
+        Path recordingFile = recordingFile(recording);
+        return RecordingFile.readAllEvents(recordingFile)
+                .stream()
+                .filter(e -> e.getEventType().getName().equals(name))
+                .toList();
     }
 
     /**
@@ -211,5 +220,39 @@ class JfrEvents {
             recording.dump(recordingFile);
         }
         return recordingFile;
+    }
+
+    /**
+     * Assert that a recording contains a jdk.VirtualThreadPinned event on the given thread.
+     */
+    private void assertContainsPinnedEvent(Recording recording, Thread thread) throws IOException {
+        List<RecordedEvent> pinnedEvents = find(recording, "jdk.VirtualThreadPinned");
+        assertTrue(pinnedEvents.size() > 0, "No jdk.VirtualThreadPinned events in recording");
+        System.err.println(pinnedEvents);
+
+        long tid = thread.threadId();
+        assertTrue(pinnedEvents.stream()
+                        .anyMatch(e -> e.getThread().getJavaThreadId() == tid),
+                "jdk.VirtualThreadPinned for javaThreadId = " + tid + " not found");
+    }
+
+    /**
+     * Waits for the given boolean to be set to true.
+     */
+    private void awaitTrue(AtomicBoolean b) throws InterruptedException {
+        while (!b.get()) {
+            Thread.sleep(10);
+        }
+    }
+
+    /**
+     * Waits for the given thread to reach a given state.
+     */
+    private static void await(Thread thread, Thread.State expectedState) throws InterruptedException {
+        Thread.State state = thread.getState();
+        while (state != expectedState) {
+            Thread.sleep(10);
+            state = thread.getState();
+        }
     }
 }
